2006-09-30  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (setup_tree_view):
	* theme-properties.glade:

	Allows the text in the details dialog lists to ellipsise, and sets a minimum width
	for the dialog. Fixes bug 355269 (Theme manager dialog width)

2006-08-28  Thomas Wood  <thos@gnome.org>

	* theme-properties.glade: Fixes bug 331835 (Missing maximize button)
	by making the main window Normal rather than Dialog.
	* ChangeLog: Converted to utf-8!

2006-08-21  Thomas Wood  <thos@gnome.org>

	* gnome-theme-manager.c: (queue_pixbuf_generation),
	(pixbuf_idle_func), (load_meta_themes): Applied first two patches from bug 351521

2006-07-27  Rob Bradford <robster@debian.org>

	Fixes #346041

	* gnome-theme-manager.[ch]:
	* theme-properties.glade: added support for locking down theme.

2006-07-25  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (window_theme_selection_changed),
	(gnome_theme_details_update_from_gconf): Don't attempt to load window
	manager theme name from an unknown window manager (fixes bug 333276 -
	gnome-theme-manager crashes with xgl/compiz)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gtk-theme-selector.desktop.in.in: don't list the Application 
	category, patch by Vincent Fretin <vincent.fretin@gmail.com> 
	(Closes: #344321)

2006-07-14  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c:
	(transfer_done_cb): Made the installation message dialog more HIG
	compliant, as per comments from bug 167045. Also reinstated the fix
	for bug 316800.
	(gnome_theme_installer_run): Remove invalid, and also duplicate, check
	for the tar utility.

2006-06-13  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (transfer_done_cb): Fix Bug 167045 -
	Strange wording in gnome-control-center theme manager messages

2006-04-28  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (write_theme_to_disk), (save_theme_to_disk),
	(save_dialog_response):
	* theme-properties.glade:
