@@ -1,3 +1,9 @@
+2006-10-02  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-manager.c: (load_meta_themes), (main): Add an
+	install-theme command line option. Fixes bug 354581 - Theme manager
+	has no CLI tool to install themes.
+
 2006-09-30  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-details.c: (setup_tree_view):
